# remind

./: .env.example  .gitignore  FULLY_AUTOMATED_PIPELINE.md  HOMEBREW_SETUP_SUMMARY.md  INSTALLATION.md  INSTALL_SCRIPT_GUIDE.md  Makefile  PRODUCTION_READINESS_SUMMARY.md  REFACTORING_COMPLETE.md  RELEASE.md  pyproject.toml
.github/: AUTOMATED_SETUP_GUIDE.md  AUTOMATION_COMPLETE.md  QUICK_REFERENCE.md  RELEASE_CHECKLIST.md
.github/workflows/: build-docker.yml  lint.yml  release-binaries.yml  submit-to-homebrew-core.yml  sync-homebrew-tap.yml  test-backend.yml  test-cli.yml  validate-formula.yml
apps/backend/: README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial_backend_schema.py
apps/backend/src/remind_backend/: .env.example  README.md  __init__.py  ai.py  auth.py  config.py  database.py  email.py  logging.py  main.py  middleware.py  prompt.py
apps/backend/src/remind_backend/api/: webhooks.py
apps/backend/src/remind_backend/api/v1/: router.py
apps/backend/src/remind_backend/api/v1/endpoints/: __init__.py  ai.py  checkout.py  health.py  usage.py
apps/backend/src/remind_backend/tests/: conftest.py  test_ai.py  test_api.py  test_auth.py
apps/backend/tests/: conftest.py  test_auth_service.py  test_usage_service.py
apps/cli/: README.md  pyproject.toml
apps/cli/build_tools/: build_deb.sh  generate_homebrew_formula.py  homebrew_formula.rb
apps/cli/src/remind_cli/: __init__.py  __main__.py  cli.py  cli_utils.py  config.py  mcp_server.py  models.py  notifications.py  output.py  platform_capabilities.py  platform_utils.py  premium.py  utils.py  version_check.py
apps/cli/src/remind_cli/commands/: add.py  doctor.py  done.py  list.py  login.py  register.py  report.py  scheduler.py  search.py  settings.py  uninstall.py  update.py  upgrade.py  usage.py
apps/cli/src/remind_cli/services/: __init__.py  ai_service.py  config_service.py  daemon_service.py  reminder_service.py  scheduler_service.py
apps/cli/src/remind_cli/ui/: __init__.py
apps/cli/tests/: conftest.py  test_reminder_service.py
apps/cli/tests/integration/: test_commands.py
apps/web/: 404.html  changelog.html  compare.html  index.html  install.sh  integrations.html  llms.txt  privacy.html  robots.txt  sitemap.xml  status.html  terms.html
apps/web/blog/: index.html
apps/web/docs/: ai-features.html  commands.html  configuration.html  getting-started.html  index.html  styles.css  troubleshooting.html
infrastructure/: CI_CD_GUIDE.md
infrastructure/docker/: backend.Dockerfile  docker-compose.yml
infrastructure/scripts/: create_user.py  install.sh  test_ai.py
