[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remind-backend"
version = "1.0.0"
description = "Backend API server for Remind - AI-powered reminders with PostgreSQL"
authors = [{name = "Remind"}]
license = {text = "MIT"}
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg[binary]",
    "alembic",
    "groq",
    "pydantic",
    "pydantic-settings",
    "structlog",
    "httpx",
    "polar-sdk",
    "remind-shared",
    "remind-database",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/remind_backend"]

[tool.uv.sources]
remind-shared = { workspace = true }
remind-database = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
